fixed height issue on mobile devices

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 
 #main-div{
     margin:auto;
-    height:100vh;
+    height:980px;
     max-width:700px;
     width:100%;
     background-color:#fff9c4;
